<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="cl.arroyo.daniel.mapafragmento.RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_register"
        android:gravity="center"/>
    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:hint="@string/full_name" />
    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:hint="@string/password" />
    <TextView android:id="@+id/register_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/rojo_cancelar"
        android:padding="10dip"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/register"
        android:background="@color/verde_aceptar"
        android:textColor="@color/blanco_comun"/>

    <!--  Link to Login Screen -->
    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/go_login"
        android:textColor="@color/verde_aceptar"
        android:textStyle="bold" />


</LinearLayout>
